# MAI_Labs_ObjectOrientedProgramming_3sem2024

./: .gitignore  CMakeLists.txt  README.md  kek.txt  some  some.cpp  test.sh  tmp.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
lab1/: CMakeLists.txt
lab1/include/: lab.h
lab1/src/: main.cpp
lab1/tests/: unit.cpp
lab2/: CMakeLists.txt
lab2/include/: lab.h
lab2/src/: main.cpp
lab2/tests/: unit.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: Array.hpp  Figure.hpp  Octagon.hpp  Point.hpp  Square.hpp  Triangle.hpp  lab.h
lab3/src/: Figure.cpp  Octagon.cpp  Point.cpp  Square.cpp  Triangle.cpp  main.cpp
lab3/tests/: Figure_unit.cpp  General_unit.cpp  Octagon_unit.cpp  Point_unit.cpp  Square_unit.cpp  Triangle_unit.cpp
lab4/: CMakeLists.txt  main.cpp
lab4/include/: Figure.hpp  NAngle.hpp  Point.hpp
lab4/tests/: Figure_unit.cpp  General_unit.cpp  NAngle_unit.cpp  Point_unit.cpp  unit.cpp
lab5/: CMakeLists.txt  main.cpp
lab5/include/: MapDynamicMemoryResource.hpp  Stack.hpp
lab5/tests/: unit.cpp
lab6/: CMakeLists.txt  main.cpp
lab6/include/: BattleGameVisitor.hpp  Druid.hpp  Game.hpp  GameObject.hpp  GameObjectObservers.hpp  IGameObjectObserver.hpp  INPC.hpp  LogGameObjectObserver.hpp  NPC.hpp  NPCFactory.hpp  Point.hpp  PrintGameObjectObserver.hpp  Squirrel.hpp  Werewolf.hpp
lab6/src/: BattleGameVisitor.cpp  Druid.cpp  Game.cpp  GameObject.cpp  IGameVisitor.hpp  INPC.cpp  INPC.hpp  LogGameObjectObserver.cpp  LogGameObjectObserver.hpp  NPC.cpp  NPCFactory.cpp  Point.cpp  Point.hpp  PrintGameObjectObserver.cpp  PrintGameObjectObserver.hpp  Squirrel.cpp  Werewolf.cpp  Werewolf.hpp
lab6/tests/: unit.cpp
lab7/: CMakeLists.txt  main.cpp
lab7/include/: Druid.hpp  Game.hpp  GameObject.hpp  NPC.hpp  Squirrel.hpp  Werewolf.hpp
lab7/src/: Druid.cpp  Game.cpp  GameObjectObservers.cpp  NPC.cpp  Squirrel.cpp  Werewolf.cpp
lab7/tests/: unit.cpp
